# gta-reversed-modern

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  gta_reversed.sln - Shortcut.lnk  premake5.bat  premake5.lua
libs/: CMakeLists.txt  premake5.lua
source/: Base.h  CMakeLists.txt  HookSystem.h  InjectHooksMain.cpp  PluginBase.cpp  PluginBase.h  ReversibleHooks.cpp  ReversibleHooks.h  StdInc.h  config.h  debug.cpp  debug.h  detours.h  detours.lib  dllmain.cpp  premake5.lua
source/app/: app.cpp  app.h  app_camera.cpp  app_debug.cpp  app_debug.h  app_game.cpp  app_game.h  app_input.cpp  app_input.h  app_light.cpp  app_light.h
source/app/platform/: platform.cpp  platform.h  preset_view.cpp
source/app/securom/: Securom.cpp  Securom.h
source/extensions/: Casting.hpp  CommandLine.cpp  CommandLine.h  Configuration.hpp  EntityRef.hpp  File.hpp  FixedFloat.hpp  FixedQuat.hpp  FixedRect.hpp  FixedVector.hpp  HeapPtrArray.hpp  SCMChunks.hpp  ScriptCommands.cpp  ScriptCommands.h  Singleton.hpp  WEnum.hpp  ci_string.hpp  container.cpp  container.hpp  enumerate.hpp  random.hpp  utility.hpp  utils.hpp
source/extensions/Configs/: FastLoader.hpp  WindowedMode.hpp
source/extensions/Configuration/: FastLoader.hpp
source/extensions/Shapes/: AngledBox.cpp  AngledBox.hpp  AngledRect.cpp  AngledRect.hpp
source/game_sa/: 3dMarker.cpp  3dMarker.h  3dMarkers.cpp  3dMarkers.h  Accident.h  AccidentManager.cpp  AccidentManager.h  Acquaintance.cpp  Acquaintance.h  ActiveOccluder.cpp  ActiveOccluder.h  AttractorScanner.cpp  AttractorScanner.h  AutoPilot.cpp  AutoPilot.h  Birds.cpp  Birds.h  BoneNodeManager_c.cpp  BoneNodeManager_c.h  BoneNode_c.cpp  BoneNode_c.h  BouncingPanel.cpp  BouncingPanel.h  BreakManager_c.cpp  BreakManager_c.h  BreakObject_c.cpp  BreakObject_c.h  Bridge.cpp  Bridge.h  BrightLights.cpp  BrightLights.h  BulletInfo.cpp  BulletInfo.h  BulletTrace.h  BulletTraces.cpp  BulletTraces.h  Buoyancy.cpp  Buoyancy.h  C2dEffect.cpp  C2dEffect.h  (+967 more)
source/game_sa/Animation/: AnimAssocAnimations.h  AnimAssocDefinitions.cpp  AnimAssocDescriptions.h  AnimAssociationData.h  AnimBlendAssocGroup.cpp  AnimBlendAssocGroup.h  AnimBlendAssociation.cpp  AnimBlendAssociation.h  AnimBlendClumpData.cpp  AnimBlendClumpData.h  AnimBlendFrameData.h  AnimBlendHierarchy.cpp  AnimBlendHierarchy.h  AnimBlendNode.cpp  AnimBlendNode.h  AnimBlendSequence.cpp  AnimBlendSequence.h  AnimBlendStaticAssociation.cpp  AnimBlendStaticAssociation.h  AnimBlock.h  AnimManager.cpp  AnimManager.h  AnimSequenceFrames.h  AnimationEnums.h  AnimationId.h  AnimationStyleDescriptor.h  CAnimBlendAssocGroup.cpp  CAnimBlendAssocGroup.h  CAnimBlendAssociation.cpp  CAnimBlendAssociation.h  CAnimBlendClumpData.h  CAnimBlendHierarchy.h  CAnimBlendNode.h  CAnimBlendSequence.cpp  CAnimBlendSequence.h  CAnimBlendStaticAssociation.h  CAnimBlock.h  CAnimManager.cpp  CAnimManager.h  CAnimationStyleDescriptor.h  (+2 more)
source/game_sa/Attractors/: PedAtmAttractor.h  PedAttractor.cpp  PedAttractor.h  PedAttractorPedPlacer.cpp  PedAttractorPedPlacer.h  PedLookAtAttractor.h  PedParkAttractor.h  PedPizzaAttractor.h  PedScriptedAttractor.h  PedSeatAttractor.h  PedShelterAttractor.cpp  PedShelterAttractor.h  PedStepAttractor.h  PedStopAttractor.h  PedTriggerScriptAttractor.h
source/game_sa/Audio/: AEAudioEnvironment.cpp  AEAudioEnvironment.h  AEAudioUtility.cpp  AEAudioUtility.h  AESmoothFadeThread.cpp  AESmoothFadeThread.h  AESound.cpp  AESound.h  AEStreamThread.cpp  AEStreamThread.h  AudioEngine.cpp  AudioEngine.h  AudioZones.cpp  AudioZones.h  CAEAudioChannel.cpp  CAEAudioChannel.h  CAEAudioEntity.cpp  CAEAudioEntity.h  CAEAudioEnvironment.cpp  CAEAudioEnvironment.h  CAEAudioHardware.cpp  CAEAudioHardware.h  CAEAudioUtility.cpp  CAEAudioUtility.h  CAEDataStream.cpp  CAEDataStream.h  CAEDoorAudioEntity.cpp  CAEDoorAudioEntity.h  CAEExplosionAudioEntity.h  CAEFireAudioEntity.h  CAEMFDecoder.cpp  CAEMFDecoder.h  CAEPedAudioEntity.cpp  CAEPedAudioEntity.h  CAEPedSpeechAudioEntity.cpp  CAEPedSpeechAudioEntity.h  CAEPoliceScannerAudioEntity.cpp  CAEPoliceScannerAudioEntity.h  CAERadioTrackManager.h  CAESmoothFadeThread.cpp  (+39 more)
source/game_sa/Collision/: BoundingBox.cpp  BoundingBox.h  Box.cpp  Box.h  CBoundingBox.cpp  CBoundingBox.h  CBox.h  CColAccel.cpp  CColAccel.h  CColBox.cpp  CColBox.h  CColDisk.h  CColLine.cpp  CColLine.h  CColModel.cpp  CColModel.h  CColPoint.cpp  CColPoint.h  CColSphere.cpp  CColSphere.h  CColStore.cpp  CColStore.h  CColTriangle.h  CColTrianglePlane.cpp  CColTrianglePlane.h  CCollision.cpp  CCollision.h  CCollisionData.cpp  CCollisionData.h  CCollisionEventScanner.h  CColourSet.h  CSphere.h  CTempColModels.cpp  CTempColModels.h  ClothesBuilder.cpp  ColAccel.cpp  ColAccel.h  ColBox.cpp  ColBox.h  ColDisk.cpp  (+30 more)
source/game_sa/Core/: CEntryInfoList.cpp  CEntryInfoList.h  CEntryInfoNode.cpp  CEntryInfoNode.h  CKeyGen.cpp  CKeyGen.h  CLink.h  CLinkList.h  CMatrix.cpp  CMatrix.h  CMatrixLink.h  CMatrixLinkList.cpp  CMatrixLinkList.h  COctTree.cpp  COctTree.h  COctTreeBase.cpp  COctTreeBase.h  CPool.h  CPtrList.h  CPtrListDoubleLink.cpp  CPtrListDoubleLink.h  CPtrListSingleLink.cpp  CPtrListSingleLink.h  CPtrNode.h  CPtrNodeDoubleLink.cpp  CPtrNodeDoubleLink.h  CPtrNodeSingleLink.cpp  CPtrNodeSingleLink.h  CQuadTreeNode.cpp  CQuadTreeNode.h  CQuaternion.cpp  CQuaternion.h  CRect.cpp  CRect.h  CStore.h  CVector.cpp  CVector.h  CVector2D.cpp  CVector2D.h  EntryInfoList.cpp  (+46 more)
source/game_sa/Data/: Weather.def
source/game_sa/Entity/: CEntity.h  (+19 more)
source/oswrapper/: oswrapper.h  oswrapper_win.cpp
source/reversiblehooks/: HookCategory.h  ReversibleHooks.cpp  ReversibleHooks.h  RootHookCategory.h  SReversibleHook.h  SSimpleReversibleHook.cpp  SSimpleReversibleHook.h  SVirtualReversibleHook.cpp  SVirtualReversibleHook.h
source/toolsmenu/: CDebugMenu.cpp  CDebugMenu.h  CDebugMenuToolInput.cpp  CDebugMenuToolInput.h  HooksDebugModule.cpp  TimecycEditor.cpp  TimecycEditor.h  TristateCheckbox.h  UIRenderer.cpp  UIRenderer.h  Utility.h  imgui_impl_rw.cpp  imgui_impl_rw.h
source/utils/: common.h
(+2026 files in other folders)
